# unix_socket_wrapper

./: .travis.yml  CMakeLists.txt  gmock.cmake  gtest.cmake
inc/: Isocket.h  socket.h  ux_socket.h
src/: socket.cpp  ux_socket.cpp
test/: CMakeLists.txt  socket_test.cpp  ux_socket_test.cpp
test/mocks/: socket_mock.h
